메인 화면 정비, 뽑기 화면 연결 구현중

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,16 +1,15 @@
+html, body {
+    height: 100%;
+    margin: 0;
+}
 body {
-    /*font-family: Arial, sans-serif;*/
-    /*background-color: #f8f9fa;*/
-    /**/
+    font-family: Arial, sans-serif;
+    background-color: #f8f9fa;
     text-align: center;
-    background-image: url('/static/images/main.webp');
-    background-size: cover;  /* 배경 이미지가 화면에 맞게 꽉 차도록 설정 */
-    background-position: center;  /* 이미지가 가운데에 위치 */
-    background-repeat: no-repeat; /* 이미지 반복 안 함 */
 }
 
 header {
-    background-color: #343a40;
+    background-color: #afa0c5;
     padding: 20px;
     color: white;
 }
@@ -26,7 +25,7 @@ nav ul li {
 }
 
 footer {
-    background-color: #343a40;
+    background-color: #afa0c5;
     color: white;
     padding: 10px;
     position: fixed;
@@ -36,10 +35,26 @@ footer {
 
 .hero {
     padding: 100px 20px;
-    background-color: #007bff;
+    flex-grow: 1; /* 남은 공간을 차지하게 만듦 */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
     color: white;
+    background-image: url('/images/main.webp');
+    background-size: cover;  /* 배경 이미지가 화면에 맞게 꽉 차도록 설정 */
+    background-position: center;  /* 이미지가 가운데에 위치 */
+    background-repeat: no-repeat; /* 이미지 반복 안 함 */
 }
-
+.index_btn{
+    flex-grow: 1; /* 남은 공간을 차지하게 만듦 */
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    gap: 10px;
+    margin: 20px 0;
+}
 .cards {
     display: flex;
     justify-content: center;
