--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,27 +7,22 @@
     <link rel="stylesheet" th:href="@{/css/style.css}">
 </head>
 <body>
-<header>
-    <h1>VisionTarot</h1>
-    <nav>
-        <ul>
-            <li><a href="#" th:href="@{/}">홈</a></li>
-            <li><a href="#">로그인</a></li>
-            <li><a href="#">문의하기</a></li>
-        </ul>
-    </nav>
-</header>
+<div th:replace="fragments/header :: header"></div>
 
 <section class="hero">
     <h2>오늘의 운명을 타로카드로 확인해보세요!</h2>
     <p>간단한 카드 뽑기로 당신의 미래를 알아보세요.</p>
-    <a th:href="@{/tarot}">
-        <button>타로카드 뽑기</button>
+</section>
+
+<section class="index_btn">
+    <a th:href="@{/card/onecard}">
+        <button>1카드 뽑기</button>
+    </a>
+    <a th:href="@{/card/threecard}">
+        <button>3카드 뽑기</button>
     </a>
 </section>
 
-<footer>
-    <p>© 2024 타로카드 뽑기 사이트</p>
-</footer>
+<div th:replace="fragments/footer :: footer"></div>
 </body>
 </html>
