고민 입력 후 카드 섞기, 카드 선택 화면 흐름 구성

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -3,7 +3,7 @@
         <h1>VisionTarot</h1>
         <nav>
             <ul>
-                <li><a href="#" th:href="@{/static}">홈</a></li>
+                <li><a href="#" th:href="@{/}">홈</a></li>
                 <li><a href="#">로그인</a></li>
                 <li><a href="#">문의하기</a></li>
             </ul>
