feat(card.html, cardScript.js) : 1카드 뽑기 화면 출력 완료

--- a/src/main/resources/templates/card.html
+++ b/src/main/resources/templates/card.html
@@ -36,7 +36,7 @@
     </div>
 </section>
 
-<section class="card-result" style="display: none">
+<section class="card-result" id="resultSection" style="display: none">
     <h3>당신이 선택한 카드는...</h3>
     <div id="result"></div>
 </section>
