feat(card.html, cardScript.js, style.css) : 카드 결과에 대한 간략 결과 박스 추가

--- a/src/main/resources/templates/card.html
+++ b/src/main/resources/templates/card.html
@@ -39,6 +39,10 @@
 <section class="card-result" id="resultSection" style="display: none">
     <h3>당신이 선택한 카드는...</h3>
     <div id="result"></div>
+    <div id="describe" class="describeBox">
+        <div id="describe-content"></div>
+        <button id="clipboard" class="clipboard-btn">복사하기</button>
+    </div>
 </section>
 
 <div th:replace="fragments/footer :: footer"></div>
