--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -6,6 +6,7 @@ body {
     font-family: Arial, sans-serif;
     background-color: #f8f9fa;
     text-align: center;
+    padding-bottom: 60px; /* 푸터의 높이와 동일하게 설정 */
 }
 
 header {
@@ -31,6 +32,7 @@ footer {
     position: fixed;
     bottom: 0;
     width: 100%;
+    height: 50px;
 }
 
 .hero {
@@ -91,3 +93,14 @@ footer {
     margin-top: 30px;
 }
 
+.describeBox {
+    display: block;
+    outline: auto;
+    outline-color: #8080802e;
+    padding: 10px;
+    margin: 30px;
+}
+
+.clipboard-btn {
+    margin: 10px;
+}
