feat(card.html, cardScript.js) : 카드 결과에 대한 클립보드 복사 기능 구현

--- a/src/main/resources/templates/card.html
+++ b/src/main/resources/templates/card.html
@@ -41,7 +41,7 @@
     <div id="result"></div>
     <div id="describe" class="describeBox">
         <div id="describe-content"></div>
-        <button id="clipboard" class="clipboard-btn">복사하기</button>
+        <button id="clipboardBtn" class="clipboard-btn">복사하기</button>
     </div>
 </section>
 
