style(card.html) : 카드 결과에 대한 문장 표현 변경

--- a/src/main/resources/templates/card.html
+++ b/src/main/resources/templates/card.html
@@ -37,7 +37,7 @@
 </section>
 
 <section class="card-result" id="resultSection" style="display: none">
-    <h3>당신이 선택한 카드는...</h3>
+    <h3>당신의 고민에 대한 타로 카드의 응답은...</h3>
     <div id="result"></div>
     <div id="describe" class="describeBox">
         <div id="describe-content"></div>
