style(style.css) : 카드 뽑기 홈페이지 추가된 요소 스타일 적용

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -29,7 +29,6 @@ footer {
     background-color: #afa0c5;
     color: white;
     padding: 10px;
-    position: fixed;
     bottom: 0;
     width: 100%;
     height: 50px;
@@ -93,7 +92,15 @@ footer {
     margin-top: 30px;
 }
 
-.describeBox {
+.describe-box {
+    display: block;
+    outline: auto;
+    outline-color: #8080802e;
+    padding: 10px;
+    margin: 30px;
+}
+
+.concern-card-box {
     display: block;
     outline: auto;
     outline-color: #8080802e;
