--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,11 +1,12 @@
 <div th:fragment="header">
     <header>
-        <h1>VisionTarot</h1>
+        <a href="#" th:href="@{/}" style="text-decoration: none; color: white;">
+            <h1 class="title">VisionTarot</h1>
+        </a>
         <nav>
             <ul>
-                <li><a href="#" th:href="@{/}">홈</a></li>
-                <li><a href="#">로그인</a></li>
-                <li><a href="#">문의하기</a></li>
+<!--                <li><a href="#">로그인</a></li>-->
+<!--                <li><a href="#">문의하기</a></li>-->
             </ul>
         </nav>
     </header>
