--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -13,6 +13,35 @@
     font-style: normal;
 }
 
+:root {
+    --font-small: clamp(14px, 1vw, 16px);
+    --font-medium: clamp(16px, 1.2vw, 20px);
+    --font-large: clamp(20px, 1.5vw, 24px);
+    --font-title: clamp(24px, 2vw, 32px);
+}
+
+h1 {
+    font-size: var(--font-title);
+    line-height: 1.3;
+    font-weight: 700;
+}
+
+h2 {
+    font-size: var(--font-large);
+    line-height: 1.4;
+    font-weight: 600;
+}
+
+p, .content-text {
+    font-size: var(--font-medium);
+    line-height: 1.7;
+}
+
+.small-text {
+    font-size: var(--font-small);
+    line-height: 1.5;
+}
+
 html, body {
     height: 100%;
     margin: 0;
@@ -24,6 +53,8 @@ body {
     text-align: center;
     padding-bottom: 60px; /* 푸터의 높이와 동일하게 설정 */
     height: 100vh;
+    font-size: var(--font-medium);
+    line-height: 1.6;
 }
 
 header {
@@ -73,7 +104,7 @@ footer {
     align-items: center;
     text-align: center;
     color: black;
-    background-image: url('/images/main.webp');
+    background-image: url('https://vision-tarot.s3.ap-northeast-2.amazonaws.com/main.webp');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
