--- a/src/main/resources/templates/card.html
+++ b/src/main/resources/templates/card.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>타로카드 뽑기</title>
     <link rel="stylesheet" th:href="@{/css/style.css}">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.8/clipboard.min.js"></script>
 </head>
 <body>
 <div th:replace="fragments/header :: header"></div>
@@ -26,7 +27,8 @@
     <div id="shufflingMessage">
         <h2>카드를 섞고 있습니다...</h2>
     </div>
-<!--    <div>카드 섞는 애니메이션</div>-->
+    <!--    <div>카드 섞는 애니메이션</div>-->
+    <div th:replace="fragments/footer :: footer"></div>
 </section>
 
 <section class="card-selection" id="selectSection" style="display: none">
@@ -56,9 +58,8 @@
             <button id="ok-btn" class="btn">처음으로</button>
         </a>
     </div>
-    <div style="bottom: 0; position: fixed; width: 100%;" th:replace="fragments/footer :: footer"></div>
 </section>
-<div id="footer-box" style="bottom: 0; position: fixed; width: 100%;" th:replace="fragments/footer :: footer"></div>
+<div style="bottom: 0; position: fixed; width: 100%;" th:replace="fragments/footer :: footer"></div>
 
 <script th:src="@{/js/cardScript.js}"></script>
 </body>
